# IntelligentUAVChampionship

./: .gitignore
basic_dev/: Dockerfile  run_basic_dev.sh  setup.bash
basic_dev/config/: orbslam_airsim.yaml
basic_dev/scripts/: repub.py  test.py  testt.py
basic_dev/src/EGO-Planner/src/Utils/assign_goals/src/: assign_goals_node.cpp
basic_dev/src/EGO-Planner/src/Utils/moving_obstacles/src/: moving_obstacles.cpp
basic_dev/src/EGO-Planner/src/Utils/odom_visualization/src/: odom_visualization.cpp
basic_dev/src/EGO-Planner/src/Utils/selected_points_publisher/src/: selected_points_publisher.cpp
basic_dev/src/EGO-Planner/src/Utils/uav_utils/scripts/: send_odom.py
basic_dev/src/EGO-Planner/src/planner/drone_detect/: CMakeLists.txt
basic_dev/src/EGO-Planner/src/planner/drone_detect/src/: drone_detector.cpp
basic_dev/src/EGO-Planner/src/planner/path_searching/: CMakeLists.txt
basic_dev/src/EGO-Planner/src/planner/path_searching/src/: dyn_a_star.cpp
basic_dev/src/EGO-Planner/src/planner/plan_env/: CMakeLists.txt
basic_dev/src/EGO-Planner/src/planner/plan_env/include/plan_env/: grid_map.h
basic_dev/src/EGO-Planner/src/planner/plan_env/src/: grid_map.cpp  grid_map_bigmap.cpp
basic_dev/src/EGO-Planner/src/planner/plan_manage/: CMakeLists.txt  package.xml
basic_dev/src/EGO-Planner/src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
basic_dev/src/EGO-Planner/src/planner/plan_manage/launch/: autoflight.launch  single_drone.launch  test.launch
basic_dev/src/EGO-Planner/src/planner/plan_manage/launch/include/: advanced_param.xml  d.rviz  default.rviz  run_in_sim.xml  simulator.xml
basic_dev/src/EGO-Planner/src/planner/plan_manage/launch/include/back/: advanced_param.xml  run_in_sim.xml
basic_dev/src/EGO-Planner/src/planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm copy.cpp  ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
basic_dev/src/EGO-Planner/src/planner/px4ctrl/: CMakeLists.txt  package.xml
basic_dev/src/EGO-Planner/src/planner/px4ctrl/config/: ctrl_param_fpv.yaml  ctrl_param_fpv（复件）.yaml
basic_dev/src/EGO-Planner/src/planner/px4ctrl/config/back/: ctrl_param_fpv.yaml
basic_dev/src/EGO-Planner/src/planner/px4ctrl/include/: PX4CtrlParam.h  controller.h
basic_dev/src/EGO-Planner/src/planner/px4ctrl/launch/: ctrl_md.launch
basic_dev/src/EGO-Planner/src/planner/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlParam.cpp  controller.cpp  input.cpp  px4ctrl_node.cpp
basic_dev/src/EGO-Planner/src/planner/swarm_bridge/include/: reliable_bridge.hpp
basic_dev/src/EGO-Planner/src/planner/swarm_bridge/src/: traj2odom_node.cpp
basic_dev/src/EGO-Planner/src/planner/traj_opt/: CMakeLists.txt
basic_dev/src/EGO-Planner/src/planner/traj_opt/include/optimizer/: poly_traj_utils.hpp
basic_dev/src/EGO-Planner/src/planner/traj_opt/src/: poly_traj_optimizer.cpp
basic_dev/src/EGO-Planner/src/planner/traj_utils/: CMakeLists.txt
basic_dev/src/EGO-Planner/src/planner/traj_utils/src/: planning_visualization.cpp
basic_dev/src/EGO-Planner/src/uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
basic_dev/src/EGO-Planner/src/uav_simulator/map_generator/src/: random_forest_sensing.cpp
basic_dev/src/FAST_LIO/: package.xml
basic_dev/src/FAST_LIO/config/: marsim.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
basic_dev/src/FAST_LIO/launch/: mapping_marsim.launch
basic_dev/src/FAST_LIO/rviz_cfg/: loam_livox.rviz
basic_dev/src/FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp
basic_dev/src/airsim_ros/: CMakeLists.txt
basic_dev/src/airsim_ros/msg/: VelCmd.msg
basic_dev/src/basic_dev/: CMakeLists.txt  package.xml
basic_dev/src/basic_dev/include/: basic_dev.hpp
basic_dev/src/basic_dev/launch/: start.launch  start_px4_marvros.launch  vi_test.launch
basic_dev/src/basic_dev/src/: basic_dev.cpp
basic_dev/src/imu_gps_odometry/: CMakeLists.txt
basic_dev/src/imu_gps_odometry/include/: eskf.hpp  imu_gps_odometry.hpp
basic_dev/src/imu_gps_odometry/src/: eskf.cpp  imu_gps_odometry.cpp
basic_dev/src/livox_ros_driver2/: build.sh
basic_dev/src/odometry/: CMakeLists.txt  package.xml
basic_dev/src/odometry/include/: keyframe.hpp  mapmanager.hpp  odometry.hpp
basic_dev/src/odometry/launch/: config.rviz  odometry.launch
basic_dev/src/odometry/src/: keyframe.cpp  mapmanager.cpp  odometry.cpp
basic_dev/src/path_sender/: CMakeLists.txt
basic_dev/src/path_sender/config/: paths.yaml
basic_dev/src/path_sender/include/: path_sender.hpp
basic_dev/src/path_sender/launch/: path_sender.launch
basic_dev/src/path_sender/scripts/: pose_gt_processor.py
basic_dev/src/path_sender/src/: path_sender copy.cpp  path_sender.cpp
basic_dev/src/vision_node/: CMakeLists.txt  package.xml
basic_dev/src/vision_node/include/: vision_node.hpp
basic_dev/src/vision_node/launch/: lio.launch
basic_dev/src/vision_node/scripts/: gps_converter.py  imu_converter.py  testtt.py
basic_dev/src/vision_node/src/: liadr_transfer.cpp  vision_node.cpp  vision_test.cpp
basic_dev/src/yolov11_ros/: CMakeLists.txt  package.xml
basic_dev/src/yolov11_ros/launch/: yolo_v11.launch
basic_dev/src/yolov11_ros/scripts/: yolo_v11.py
basic_dev/src/yolov11_ros_msgs/: CMakeLists.txt  package.xml
