<?xml version="1.0"?>
<package format="2">
  <name>yolov11_ros_msgs</name>
  <version>1.0.0</version>
  <description>The yolov11_ros_msgs package</description>
  
  <maintainer email="2096861531@qq.com">Xu Zhang</maintainer>

  <license>TODO</license>

  <depend>message_runtime</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>

  </export>
</package>
